# Skak

./: .gitignore  .ignore  README.md  compile.js  mix.exs  package-lock.json  package.json  readme.md
CSM/: index.ts  package-lock.json  package.json  test.ts
CSM/src/: board.ts  chess.ts  engine.ts  helpers.ts  ugly_functions.ts
_server/: main.ts  package-lock.json  package.json
_server/models/: user.model.ts
_server/setup/: gen_files.ts  server_setup.ts
_server/socket/: friends.ts  public_lobby.ts
_server/src/: main.ts
_server/src/api/: database.ts
_website/: bun.lockb  tailwind.config.cjs
_website/src/: app.html
_website/src/components/: board.svelte
_website/src/routes/: home.svelte  index.svelte
_website/src/stores/: networking.ts
assets/: package-lock.json
assets/css/: app.scss
assets/js/: app.js  sveltegen.js
assets/js/svelte/: board.svelte  piece.svelte  store.js
bevy_skak/: Cargo.toml
bevy_skak/assets/asesprite/: highlight.aseprite  hover.aseprite
bevy_skak/src/: bevy_chess.rs  extra.rs  main.rs
bevy_skak/src/chess/: chess_types.rs  mod.rs  run_ifs.rs  test.json
bevy_skak/src/interface/: mod.rs  types.rs  ui.rs
bevy_skak/src/interfacev2/: mod.rs  types.rs  ui.rs
chess_machine_lib/: Cargo.toml
chess_machine_lib/src/: extra.rs  lib.rs
chess_machine_lib/src/chess/: chess_types.rs  mod.rs
config/: .prettierrc.json  config.exs  dev.exs  prod.exs  prod.secret.exs  rollup.config.js  test.exs  tsconfig.json  webpack.config.js
engine/: .gitignore  ChessPlusPlus  Makefile  board.cpp  board.h  main.cpp  movegen.cpp  movegen.h  perft.cpp  perft.h  rng.cpp  rng.h  shorthands.cpp  shorthands.h  uci.cpp  uci.h  utils.cpp  utils.h
front/: package-lock.json  package.json  tailwind.config.ts  vite.config.ts
front/src/: app.css
front/src/lib/: index.ts  state.ts  user.ts  ws.ts
front/src/routes/: +layout.svelte  +page.svelte
hello-rocket/src/: main.rs
lib/: chess_site.ex  chess_site_web.ex
lib/chess_site/: application.ex  repo.ex
lib/chess_site/users/: user.ex
lib/chess_site_web/: endpoint.ex  gettext.ex  router.ex  telemetry.ex
lib/chess_site_web/channels/: user_socket.ex
lib/chess_site_web/controllers/: page_controller.ex
lib/chess_site_web/views/: error_helpers.ex  error_view.ex  layout_view.ex  page_view.ex
nserv/: mydb.sqlite  package-lock.json  package.json  tsconfig.json
nserv/src/: main.ts  server.ts
nserv/src/api/: database.ts  games.ts  invites.ts  security.ts  users.ts
priv/repo/: seeds.exs
priv/repo/migrations/: 20210711224137_create_users.exs
rengine/src/: directions.rs  index.rs  lib.rs  main.rs  move.rs  piece.rs
server/: .gitignore  Cargo.toml  _hotreload.ts  _server_setup.ts  main.ts  package-lock.json  package.json  tsconfig.json  users.json
server/config/: env.json
server/models/: user.model.ts  user.ts
server/routes/: auth.router.ts  example.router.ts  example.ts  testing.router.ts  users.router.ts  users.ts
server/routes/legacy/: example.router.ts
server/routes/v1/: auth.router.ts  testing.router.ts  user_info.router.ts  users.router.ts
server/setup/: README.md  crypto.ts  database.ts  gen_files.ts  hotreload.ts  server_setup.ts
server/socket/: active_users.ts  chess_games.ts  friends.ts  games.ts  lobby.ts
server/src/: auth.rs  com.rs  logging.rs  main.rs  security.rs  server.rs  std_format_msgs.rs  types.rs  users.rs  validate.rs
server/src/actors/: engine.rs  game.rs  mod.rs  server.rs  session.rs
server/src/actors/server/: game_api.rs  user_api.rs
server/src/client_thread/: actor.rs  api.rs  logic.rs  mod.rs  web_socket_stuff.rs
server/src/communication/: mod.rs  server.rs  session.rs  std.rs  std_format_msgs.rs
server/src/engine_thread/: actor.rs  api.rs  logic.rs  mod.rs  types.rs
server/src/game_api/: interface.rs
server/src/game_thread/: api.rs  logic.rs  mod.rs  types.rs
server/src/refactor/: engine_actor.rs  game_actor.rs  mod.rs  server.rs  sockets.rs  types.rs  validate.rs
server/src/refactor/server/: game_related_api.rs  server_actor.rs  user_related_api.rs
server/src/refactor/sockets/: socket_actor.rs  socket_api.rs  socket_endpoint.rs
server/src/server_thread/: actor.rs  api.rs  logic.rs  mod.rs
server/src/socket_user_api/: interface.rs  mod.rs
server/src/tests/: game_actor_test.rs  mod.rs  users_test.rs
server/src/user_api/: auth.rs  interface.rs  types.rs
server/src/user_mod/: mod.rs  types.rs  users.rs  validate.rs
server/src/wsserver/: server.rs  session.rs
shared/: functions.ts  types.ts
shared/functions/: checkers.ts  default_values.ts
sisyphus32/: .gitignore  Cargo.toml  LICENSE  README.md
sisyphus32/.github/workflows/: test.yml
sisyphus32/openings/: openings.pgn
sisyphus32/src/: bit_move.rs  bit_twiddles.rs  bitboard.rs  bot_game.rs  castling_rights.rs  color.rs  consts.rs  error.rs  eval_move.rs  eval_position.rs  features.rs  fen.rs  file.rs  global_thread_pool.rs  history_heuristic.rs  killer_moves.rs  lib.rs  magic_numbers.rs  main.rs  move_flag.rs  move_generation.rs  move_list.rs  move_masks.rs  opening_book.rs  perft.rs  piece.rs  position.rs  rank.rs  rng.rs  score.rs  search.rs  square.rs  syzygy.rs  timer.rs  transposition_table.rs  uci.rs  zobrist.rs
sisyphus32/tests/: integration_tests.rs
test/: test_helper.exs
test/chess_site_web/controllers/: page_controller_test.exs
test/chess_site_web/views/: error_view_test.exs  layout_view_test.exs  page_view_test.exs
test/support/: channel_case.ex  conn_case.ex  data_case.ex
web/: astro.config.mjs  bun.lockb  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
web/.svelte-kit/: ambient.d.ts
web/.svelte-kit/adapter-bun/: index.js  manifest.js  vite-manifest.json
web/css/: app.scss
web/js/: app.js
web/js/svelte/: auth.svelte  (+7 more)
web/public/: _hotreload.js  global.css
web/src/: app.html
web/static/: hotreload.js
web/svelte/: App.svelte  style.sass
web/views/: boilerplate.ejs  default_header.ejs  index.ejs  test_components.ejs
website/: package-lock.json  package.json
website/src/: app.html
(+67 files in other folders)
