[package]
name = "skak_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-web = "4.3.1"
actix-web-actors = "4.2.0"
pwhash = "1.0.0"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
random-string = "1.0.0"
rand = "0.8.5"
tokio = { version = "1.32.0", features = ["full"]}
pleco = "0.5.0"
chess_machine_lib = { path = "../chess_machine_lib" }
chrono = "0.4.41"
