[package]
name = "sisyphus32"
version = "1.3.3"
edition = "2021"
default-run = "sisyphus32"
license = "MIT"
description = "Feature-based UCI Chess Engine"
repository = "https://github.com/juules32/sisyphus32"
readme = "README.md"
keywords = ["chess", "optimization"]
exclude = [
    "openings/openings.pgn",
]

[[bin]]
name = "sisyphus32"
path = "src/main.rs"

[dependencies]

# Global deps
ctor = "0.4.2"
thiserror = "2.0.12"

# Parallelize deps
rayon = { version = "1.10.0", optional = true }

# Opening book deps
serde = { version = "1.0.219", features = ["derive"], optional = true }
serde_json = { version = "1.0.140", optional = true }
ureq = { version = "3.0.11", features = ["json"], optional = true }
rand = { version = "0.9.1", optional = true }

# Endgame tablebase deps
shakmaty-syzygy = { version = "0.25.3", optional = true }
shakmaty = { version = "0.27.3", optional = true }

# WASM deps
js-sys = { version = "0.3.77", optional = true }

# Used by profiler
[profile.release-with-debug]
inherits = "release"
debug = true

# Used by build_all binary
[profile.release-all]
inherits = "release"

[features]

default = ["all"]

# All features excluding those WASM can't use
core = [
    "base_default",
    "iterative_deepening",
    "negamax",
    "pst",
    "sort_moves",
    "quiescence",
    "quiescence_en_passant",
    "checks_add_depth",
    "killer_heuristic",
    "history_heuristic",
    "tt",
    "eval_tt",
    "tt_two_tier",
    "null_move_pruning",
    "late_move_reductions",
    "tapered_eval",
    "move_flag_eval",
    "bot_game",
]

# Features WASM can't use
extras = [
    "parallel_perft",
    "lazy_smp",
    "opening_book",
    "syzygy_tablebase",
]

# WASM deps to enable
all_wasm = [
    "core",
    "js-sys"
]

# All features!
all = [
    "core",
    "extras",
]

# Features not included due to inferior performance
dropped = [
    "positional_eval",
    "pseudo_pins",
    "capture_with_check_eval",
]

# All individual features included in the base implementations below
bb =                        []
bb_array =                  []
magic_bbs =                 []
revert_undo =               []
revert_clone =              []
parallel_perft =            ["rayon"]

# Movegen/Board Representation
base_basic =                ["bb",       "revert_undo"]
base_magic_number =         ["bb",       "revert_undo",  "magic_bbs"]
base_clone =                ["bb",       "revert_clone", "magic_bbs"]
base_clone_parallel =       ["bb",       "revert_clone", "magic_bbs", "parallel_perft"]
base_array =                ["bb_array", "revert_clone", "magic_bbs"]
base_array_parallel =       ["bb_array", "revert_clone", "magic_bbs", "parallel_perft"]
base_default =              ["base_array"]

# All individual features included in the versions below
# They are used to enable selective inclusion for compilation
# They can be mixed and matched at will although many depend on each other
iterative_deepening =       ["base_default"]
minimax =                   ["base_default"]
negamax =                   ["base_default"]
pst =                       ["base_default"]
sort_moves =                ["base_default", "negamax"]
quiescence =                ["base_default", "negamax"]
quiescence_en_passant =     ["base_default", "negamax", "quiescence"]
checks_add_depth =          ["base_default", "negamax"]
killer_heuristic =          ["base_default", "sort_moves"]
history_heuristic =         ["base_default", "sort_moves"]
tt =                        ["base_default", "negamax"]
eval_tt =                   ["base_default", "sort_moves", "tt"]
tt_two_tier =               ["base_default", "negamax", "tt"]
null_move_pruning =         ["base_default", "negamax"]
late_move_reductions =      ["base_default", "sort_moves"]
tapered_eval =              ["base_default"]
positional_eval =           ["base_default"]
pseudo_pins =               ["base_default"]
capture_with_check_eval =   ["base_default", "sort_moves"]
move_flag_eval =            ["base_default", "sort_moves"]
lazy_smp =                  ["base_default", "negamax", "tt", "rayon"]
opening_book =              ["base_default", "ureq", "rand", "serde", "serde_json"]
syzygy_tablebase =          ["base_default", "shakmaty", "shakmaty-syzygy"]

# Special feature beyond the scope of the main engine
bot_game =                  ["base_default", "negamax"]

# All versions with more and more features included in their approximate order of implementation
# They are used for testing the relative difference in playing strength of newly developed features
version_iterative_deepening =       ["base_default", "iterative_deepening"]
version_minimax =                   ["version_iterative_deepening", "minimax"]
version_negamax =                   ["version_iterative_deepening", "negamax"]
version_pst =                       ["version_negamax", "pst"]
version_sort_moves =                ["version_pst", "sort_moves"]
version_quiescence =                ["version_sort_moves", "quiescence"]
version_quiescence_en_passant =     ["version_quiescence", "quiescence_en_passant"]
version_checks_add_depth =          ["version_quiescence_en_passant", "checks_add_depth"]
version_killer_heuristic =          ["version_checks_add_depth", "killer_heuristic"]
version_history_heuristic =         ["version_killer_heuristic", "history_heuristic"]
version_tt =                        ["version_history_heuristic", "tt"]
version_eval_tt =                   ["version_tt", "eval_tt"]
version_tt_two_tier =               ["version_eval_tt", "tt_two_tier"]
version_null_move_pruning =         ["version_tt_two_tier", "null_move_pruning"]
version_late_move_reductions =      ["version_null_move_pruning", "late_move_reductions"]
version_tapered_eval =              ["version_late_move_reductions", "tapered_eval"]
version_positional_eval =           ["version_tapered_eval", "positional_eval"]
version_pseudo_pins =               ["version_tapered_eval", "pseudo_pins"]
version_capture_with_check_eval =   ["version_tapered_eval", "capture_with_check_eval"]
version_move_flag_eval =            ["version_tapered_eval", "move_flag_eval"]
version_lazy_smp =                  ["version_move_flag_eval", "lazy_smp"]
version_opening_book =              ["version_lazy_smp", "opening_book"]
version_syzygy_tablebase =          ["version_opening_book", "syzygy_tablebase"]
